Alignment and styling fixes

--- a/public/styles.css
+++ b/public/styles.css
@@ -138,15 +138,26 @@ p {
   margin-left: 12px;
   margin-top: 30px;
   margin-right: 12px;
-  background: #131419;
+  /* background: #131419;
   border-radius: 10px;
-  box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.05), 5px 5px 15px rgba(0, 0, 0, 0.8);
+  box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.05), 5px 5px 15px rgba(0, 0, 0, 0.8); */
 }
 
 .message>p {
   font-size: small;
 }
-
+.messageContainer
+{
+  width: 4.5%;
+  background: #131419;
+  border-radius: 10px;
+  box-shadow: 0 4px 4px 4px #020308;
+  padding: 5px 5px 5px 5px;
+}
+.us
+{
+  margin-left: 5.5%;
+}
 .title-header>p {
   font-family: 'Montserrat', sans-serif;
   font-weight: 300;
@@ -357,8 +368,8 @@ p {
 
 .message-list {
   margin-bottom: 40px;
-  border-radius: 10px;
-  box-shadow: -2px -2px 6px rgba(255, 255, 255, 0.1), 2px 2px 6px rgba(0, 0, 0, 0.8);
+  /* border-radius: 10px; */
+  /* box-shadow: -2px -2px 6px rgba(255, 255, 255, 0.1), 2px 2px 6px rgba(0, 0, 0, 0.8); */
   font-family: 'Raleway', 'sans-serif';
   font-weight: 900;
   padding: 12px 12px 12px 12px;
